--- a/todoit-ts/index.html
+++ b/todoit-ts/index.html
@@ -11,13 +11,17 @@
 <body id="todoIt" style="text-align: center">
     <h1>TodoIt</h1>
     <h2>Add new items</h2>
+
     <p> What needs to be done?
-        <input type="text" id="todoInput" title="What should be added to the todo list?" onblur="addTodo()" />
-        <input type="button" value="Add todo" onclick="addTodo()" />
+        <input type="text" id="todoInput" title="What should be added to the todo list?"
+            onkeyup="if(EventUtils.isEnter(event)) { todoIt.addTodo() }" onblur="todoIt.addTodo()" />
+
+        <input type="button" value="Add todo" onclick="todoIt.addTodo()" />
     </p>
+
     <h2>Current todo list</h2>
-    <p>Filter: <input type="text" id="todoFilter" title="Filter for the todo list" onkeyup="filterTodoList()"
-            onblur="filterTodoList()" /></p>
+    <p>Filter: <input type="text" id="todoFilter" title="Filter for the     todo list" onkeyup="todoIt.filterTodoList()"
+            onblur="todoIt.filterTodoList()" /> </p>
     <div id="todoListContainer">Nothing to do, hurray!</div>
 </body>
 <script type="text/javascript" src="todo-it.js"></script>
